bin_PROGRAMS = wk-ioburst wk-deadlock wk-dthread wk-inception wk-srvhog \
               wk-clihog wk-lockfight wk-cpm1 wk-cpm2 wk-cpm3 wk-pipeline \
               wk-mutex wk-imbalance wk-reparent wk-pipette wk-pulse

wk_pulse_SOURCES = pulse.c
wk_pulse_LDADD = libwk.a

wk_ioburst_SOURCES = ioburst.c
wk_ioburst_LDADD = libwk.a

wk_deadlock_SOURCES = deadlock.c

wk_dthread_SOURCES = dthread.c

wk_inception_SOURCES = inception.c
wk_inception_LDADD = libwk.a

wk_srvhog_SOURCES = srvhog.c
wk_srvhog_LDADD = libwk.a

wk_clihog_SOURCES = clihog.c
wk_clihog_LDADD = libwk.a

wk_lockfight_SOURCES = lockfight.c
wk_lockfight_LDADD = libwk.a

wk_cpm1_SOURCES = cpm1.c
wk_cpm1_LDADD = libwk.a

wk_cpm2_SOURCES = cpm2.c
wk_cpm2_LDADD = libwk.a

wk_cpm3_SOURCES = cpm3.c
wk_cpm3_LDADD = libwk.a

wk_pipeline_SOURCES = pipeline.c

wk_mutex_SOURCES = mutex.c

wk_imbalance_SOURCES = imbalance.c
wk_imbalance_LDADD = libwk.a

wk_reparent_SOURCES = reparent.c

wk_pipette_SOURCES = pipette.c
wk_pipette_LDADD = libwk.a

noinst_LIBRARIES = libwk.a
libwk_a_SOURCES = calibrate.h calibrate.c spin.c spin.h utils.c utils.h pincpu.c pincpu.h
